--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/musl"]
-	path = lib/musl
-	url = git://git.musl-libc.org/musl
+[submodule "lib/newlib-cygwin"]
+	path = lib/newlib-cygwin
+	url = git://sourceware.org/git/newlib-cygwin.git
