xmodem (but does not work)

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,2 +1,2 @@
-all:
-	echo $(MAKECMDGOALS)
+xmodem:
+	gcc -Wall -pedantic -o xmodem xmodem.c ../source/xmodem.c ../source/uart.c -I../include/ -std=c99
